Campaign -> Story Arc, Strat Con, Unit
Signed-off-by: Richard J Hancock <rjhancock@tapenvy.us>