@@ -90,7 +90,7 @@ public class BattleArmorEquipmentUnscrambler extends EquipmentUnscrambler {
             if (parts.isEmpty()) {
                 parts = tempParts.stream()
                               .filter(part -> part.getType().getInternalName().equals(m.getType().getInternalName()))
-                              .collect(Collectors.toList());
+                              .toList();
 
                 parts.forEach(part -> part.setEquipmentNum(eqNum));
             }
@@ -125,8 +125,8 @@ public class BattleArmorEquipmentUnscrambler extends EquipmentUnscrambler {
                 // possibility of equipment missing equipment for some troopers in the case of
                 // modular/AP mounts or DWPs
                 for (final Part part : perTrooper) {
-                    if (part != null) {
-                        tempParts.remove(part);
+                    if (part instanceof EquipmentPart equipmentPart) {
+                        tempParts.remove(equipmentPart);
                     }
                 }
             } else {
